[package]
name = "compiler-common"
version = "1.0.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The compiler constants"

[lib]
doctest = false

[dependencies]
sha3 = "0.9"

[dependencies.inkwell]
git = "ssh://git@github.com/matter-labs-forks/inkwell"
branch = "master"
default-features = false
features = ["llvm11-0", "target-syncvm"]
