[package]
name = "compiler-common"
version = "1.0.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2021"
description = "The compiler common data"

[lib]
doctest = false

[dependencies]
sha3 = "0.9"

[dependencies.inkwell]
git = "ssh://git@github.com/matter-labs-forks/inkwell"
branch = "master"
default-features = false
features = ["llvm13-0", "target-syncvm"]
